# codex-sdk-rs

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs  streaming.rs  structured_output.rs
src/: codex.rs  codex_options.rs  error.rs  events.rs  exec.rs  items.rs  lib.rs  output_schema_file.rs  thread.rs  thread_options.rs  turn_options.rs
tests/: exec_args.rs  normalize_input.rs  output_schema.rs
